// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildCandidateIssuesByStateIdsQuery > matches snapshot with project filter 1`] = `
"
    query RisolutoCandidateIssuesByStateIds($after: String, $stateIds: [ID!], $projectSlug: String!) {
      issues(first: 50, after: $after, filter: {
        state: { id: { in: $stateIds } }
        project: { slugId: { eq: $projectSlug } }
      }) {
        nodes {
          
  id
  identifier
  title
  description
  priority
  branchName
  url
  createdAt
  updatedAt
  state {
    name
  }
  labels {
    nodes {
      name
    }
  }
  inverseRelations {
    nodes {
      id
      type
      issue {
        id
        identifier
        state {
          name
        }
      }
      relatedIssue {
        id
        identifier
        state {
          name
        }
      }
    }
  }

        }
        pageInfo {
          hasNextPage
          endCursor
        }
      }
    }
  "
`;

exports[`buildCandidateIssuesByStateIdsQuery > matches snapshot without project filter 1`] = `
"
    query RisolutoCandidateIssuesByStateIds($after: String, $stateIds: [ID!]) {
      issues(first: 50, after: $after, filter: {
        state: { id: { in: $stateIds } }
        
      }) {
        nodes {
          
  id
  identifier
  title
  description
  priority
  branchName
  url
  createdAt
  updatedAt
  state {
    name
  }
  labels {
    nodes {
      name
    }
  }
  inverseRelations {
    nodes {
      id
      type
      issue {
        id
        identifier
        state {
          name
        }
      }
      relatedIssue {
        id
        identifier
        state {
          name
        }
      }
    }
  }

        }
        pageInfo {
          hasNextPage
          endCursor
        }
      }
    }
  "
`;

exports[`buildCandidateIssuesQuery > matches snapshot with project filter 1`] = `
"
    query RisolutoCandidateIssues($after: String, $activeStates: [String!], $projectSlug: String!) {
      issues(first: 50, after: $after, filter: {
        state: { name: { in: $activeStates } }
        project: { slugId: { eq: $projectSlug } }
      }) {
        nodes {
          
  id
  identifier
  title
  description
  priority
  branchName
  url
  createdAt
  updatedAt
  state {
    name
  }
  labels {
    nodes {
      name
    }
  }
  inverseRelations {
    nodes {
      id
      type
      issue {
        id
        identifier
        state {
          name
        }
      }
      relatedIssue {
        id
        identifier
        state {
          name
        }
      }
    }
  }

        }
        pageInfo {
          hasNextPage
          endCursor
        }
      }
    }
  "
`;

exports[`buildCandidateIssuesQuery > matches snapshot without project filter 1`] = `
"
    query RisolutoCandidateIssues($after: String, $activeStates: [String!]) {
      issues(first: 50, after: $after, filter: {
        state: { name: { in: $activeStates } }
        
      }) {
        nodes {
          
  id
  identifier
  title
  description
  priority
  branchName
  url
  createdAt
  updatedAt
  state {
    name
  }
  labels {
    nodes {
      name
    }
  }
  inverseRelations {
    nodes {
      id
      type
      issue {
        id
        identifier
        state {
          name
        }
      }
      relatedIssue {
        id
        identifier
        state {
          name
        }
      }
    }
  }

        }
        pageInfo {
          hasNextPage
          endCursor
        }
      }
    }
  "
`;

exports[`buildCreateIssueMutation > matches snapshot 1`] = `
"
    mutation RisolutoCreateIssue($teamId: String!, $projectId: String, $title: String!, $description: String, $stateId: String) {
      issueCreate(input: { teamId: $teamId, projectId: $projectId, title: $title, description: $description, stateId: $stateId }) {
        success
        issue {
          id
          identifier
          url
        }
      }
    }
  "
`;

exports[`buildCreateLabelMutation > matches snapshot 1`] = `
"
    mutation RisolutoCreateLabel($teamId: String, $name: String!, $color: String) {
      issueLabelCreate(input: { teamId: $teamId, name: $name, color: $color }) {
        success
        issueLabel {
          id
          name
        }
      }
    }
  "
`;

exports[`buildCreateProjectMutation > matches snapshot 1`] = `
"
    mutation RisolutoCreateProject($name: String!, $teamIds: [String!]!) {
      projectCreate(input: { name: $name, teamIds: $teamIds }) {
        success
        project {
          id
          name
          slugId
          url
          teams(first: 1) {
            nodes {
              key
            }
          }
        }
      }
    }
  "
`;

exports[`buildIssuesByIdsQuery > matches snapshot 1`] = `
"
    query RisolutoIssuesByIds($ids: [ID!], $after: String) {
      issues(first: 50, after: $after, filter: { id: { in: $ids } }) {
        nodes {
          
  id
  identifier
  title
  description
  priority
  branchName
  url
  createdAt
  updatedAt
  state {
    name
  }
  labels {
    nodes {
      name
    }
  }
  inverseRelations {
    nodes {
      id
      type
      issue {
        id
        identifier
        state {
          name
        }
      }
      relatedIssue {
        id
        identifier
        state {
          name
        }
      }
    }
  }

        }
        pageInfo {
          hasNextPage
          endCursor
        }
      }
    }
  "
`;

exports[`buildIssuesByStatesQuery > matches snapshot 1`] = `
"
    query RisolutoIssuesByStates($states: [String!], $after: String) {
      issues(first: 50, after: $after, filter: { state: { name: { in: $states } } }) {
        nodes {
          
  id
  identifier
  title
  description
  priority
  branchName
  url
  createdAt
  updatedAt
  state {
    name
  }
  labels {
    nodes {
      name
    }
  }
  inverseRelations {
    nodes {
      id
      type
      issue {
        id
        identifier
        state {
          name
        }
      }
      relatedIssue {
        id
        identifier
        state {
          name
        }
      }
    }
  }

        }
        pageInfo {
          hasNextPage
          endCursor
        }
      }
    }
  "
`;

exports[`buildProjectLookupQuery > matches snapshot 1`] = `
"
    query RisolutoPlanProject($projectSlug: String!) {
      projects(first: 1, filter: { slugId: { eq: $projectSlug } }) {
        nodes {
          id
          name
          slugId
          teams(first: 1) {
            nodes {
              id
              name
              key
            }
          }
        }
      }
    }
  "
`;

exports[`buildTeamStatesQuery > matches snapshot 1`] = `
"
    query RisolutoTeamStates($teamId: String!) {
      team(id: $teamId) {
        id
        name
        states {
          nodes {
            id
            name
            type
          }
        }
      }
    }
  "
`;

exports[`buildTeamsQuery > matches snapshot 1`] = `
"
    query RisolutoTeams {
      teams(first: 50) {
        nodes {
          id
          name
          key
        }
      }
    }
  "
`;
